--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Catalogo de roupas</title>
 </head>
 <body>
 	<nav>
+
 		<img class="logo" src="img/logo.png">
+		<h1>
+			Catologo de Roupas
+		</h1>
+		
 	</nav>
 
 	<header>
-		<h1>Catalogo de roupas</h1>
+		<h2>Catalogo de roupas</h2>
 
 		<div class="arrow">
 			<div class="card">
